# pico-bit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Embed.toml  LICENSE  README.md  asset_pipeline.py  build.py  build_support.py  deploy.py  llm.md  loot.json  payload.dd  pyproject.toml  release.py
.cargo/: config.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-uf2.yml  release.yml  validate.yml
.zed/: debug.json  settings.json  tasks.json
agent/: Cargo.toml  build.sh
agent/.cargo/: config.toml
agent/src/: lib.rs  main.rs  transport.rs
agent/src/collect/: files.rs  mod.rs  network.rs  software.rs  system.rs  user.rs  wifi.rs
c_modules/: micropython.cmake
c_modules/usb_ncm/: micropython.cmake  usb_ncm.c  usb_ncm_descriptors.c
firmware/: THIRD_PARTY_LICENSE.md
frozen/: manifest.py
keys/: signing-public-key.pem
scripts/: __init__.py  asset_pipeline.py  build.py  build_pipeline.py  build_support.py  deploy.py  release.py
src/: boot.py  device_config.py  helpers.py  hid.py  keyboard.py  keyboard_layouts.py  lib.rs  main.py  main.rs  payload_library.py  runners.rs  server.py  status.rs  status_led.py  usb.py  usb_agent_drive.py  web_assets.py
src/ducky/: __init__.py  analysis.py  constants.py  errors.py  errors.rs  executor.rs  keyboard.rs  lexer.py  mod.rs  parser.py  parser.rs  payload.py  runtime.py  types.rs
src/net/: dhcp.rs  mod.rs  network.rs
src/net/http/: assets.rs  delivery.rs  mod.rs  router.rs
src/net/http/api/: mod.rs  payload.rs  status.rs
src/net/http/api/armory/: controller.rs  service.rs
src/net/http/api/bootstrap/: controller.rs  mod.rs  service.rs
src/net/http/api/keyboard/: controller.rs  mod.rs  service.rs
src/net/http/api/metrics/: controller.rs  mod.rs  service.rs
src/net/http/api/payload/: controller.rs  mod.rs  service.rs
src/net/http/api/runs/: controller.rs  mod.rs  service.rs
src/pio/: manager.rs  mod.rs
src/runners/: http.rs  mod.rs  usb.rs  wifi.rs
src/runners/http/: classify.rs  direct.rs  json.rs  mod.rs  replay.rs  request.rs
src/server/: __init__.py  _http.py  app.py  constants.py  execution_stream.py  loot_crypto.py  loot_stream.py  micro_server.py  routes_auth.py  routes_binary.py  routes_loot.py  routes_payload.py  routes_usb_agent.py  service.py  sse.py  static.py
src/server/api/: __init__.py  auth.py  binary.py  loot.py  payload.py  usb_agent.py
src/storage/: driver.rs  manager.rs  mod.rs
src/usb/: manager.rs  mod.rs
src/utils/: json_buffer.rs  json_chunks.rs  mod.rs
stubs/: machine.pyi  network.pyi
tests/: _test_client.py  conftest.py  test_analysis.py  test_asset_pipeline.py  test_build.py  test_deploy.py  test_keyboard_layouts.py  test_lexer.py  test_loot_crypto.py  test_loot_stream.py  test_parser.py  test_release.py  test_routes_binary.py  test_runtime.py  test_server.py  test_status_led.py  test_usb.py  test_usb_agent_drive.py
web/: .prettierrc  eslint.config.js  index.html  login.html  package-lock.json  package.json  portal.css  portal.js  svelte.config.js  theme.css  tsconfig.json  vite.config.ts  vitest-setup.ts  vitest.config.ts
web/src/: App.svelte  index.css  index.ts
web/src/actions/: fileDrop.ts
web/src/api/: cache.test.ts  cache.ts  client.test.ts  client.ts  contracts.ts
web/src/attachments/: fileDrop.test.ts  fileDrop.ts
web/src/components/: AppSkeleton.svelte  BinaryArmory.svelte  DuckyEditor.svelte  ExecutionTimeline.svelte  ExecutionTimeline.test.ts  LeftRail.svelte  LootViewer.svelte  LootViewer.test.ts  PortalSkeleton.svelte  RightRail.svelte  Skeleton.svelte  StatusCards.svelte  ThemeToggle.svelte  ThemeToggle.test.ts  ValidationModal.svelte  ValidationModal.test.ts
web/src/dev/: mock.ts
web/src/lib/: api.test.ts  api.ts  binary.test.ts  binary.ts  editor.test.ts  editor.ts  loot.test.ts  loot.ts  types.ts
web/src/sections/: LeftSection.svelte  MiddleSection.svelte  RightSection.svelte  TopSection.svelte
web/src/stores/: activity.test.ts  activity.ts  ap.ts  binary.ts  bootstrap.test.ts  bootstrap.ts  bootstrapCache.ts  editor.test.ts  editor.ts  execution.ts  keyboard.test.ts  keyboard.ts  loot.test.ts  loot.ts  portal.ts  run.ts  theme.ts  ui.ts  usb.ts
