[tool.poetry]
name = "pico-bit"
version = "0.0.1"
description = "MicroPython DuckyScript runtime and frozen-firmware toolchain for Raspberry Pi Pico 2."
authors = ["pico-bit contributors"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4,<10.0"
pyright = "^1.1.405"
ruff = "^0.14.0"
mpy-cross = "^1.27.0.post2"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingModuleSource = false
include = ["build.py", "deploy.py", "scripts", "src", "tests"]
exclude = [
    "dist",
    ".venv",
    "venv",
    "**/__pycache__",
    "**/node_modules",
    "**/.*",
]
stubPath = "stubs"
executionEnvironments = [
    { root = ".", extraPaths = ["src"] },
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["scripts", "src", "tests"]
extend-exclude = ["dist", "venv", "node_modules"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
ignore = ["SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["ducky"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
