[project]
name = "pico-bit"
version = "0.0.1"
description = "MicroPython DuckyScript runtime and frozen-firmware toolchain for Raspberry Pi Pico 2."
authors = [{ name = "Anapeksha Mukherjee <anapeksha.mukherjee@gmail.com>" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["microdot>=2.6.1"]

[dependency-groups]
dev = [
    "pytest>=8.4,<10.0",
    "pyright>=1.1.405,<2",
    "ruff>=0.14.0,<=0.15.12",
    "mpy-cross>=1.27.0.post2,<2",
]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingModuleSource = false
include = ["build.py", "release.py", "scripts", "src", "tests"]
exclude = [
    "dist",
    ".venv",
    "venv",
    "**/__pycache__",
    "**/node_modules",
    "**/.*",
]
stubPath = "stubs"
executionEnvironments = [{ root = ".", extraPaths = ["src"] }]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["scripts", "src", "tests"]
exclude = ["src/web_assets.py"]
extend-exclude = ["dist", "venv", "node_modules"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
ignore = ["SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["ducky"]
