[package]
name = "agent"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "recon"
path = "src/bin/recon.rs"
required-features = ["with-sysinfo"]

[[bin]]
name = "exfil"
path = "src/bin/exfil.rs"

[[bin]]
name = "persist"
path = "src/bin/persist.rs"

[[bin]]
name = "wipe"
path = "src/bin/wipe.rs"

[features]
default = []
with-sysinfo = ["dep:sysinfo"]

[dependencies]
serde_json = "1"
ureq = { version = "2", default-features = false }
sysinfo = { version = "0.39.0", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
